--- a/app/root/index.html
+++ b/app/root/index.html
@@ -5,10 +5,143 @@
     <title>index</title>
     <link rel="stylesheet" href="asset/css/main.css">
 </head>
+
+<style>
+    .kaio-ken {
+        animation-duration        : 1000ms;
+        animation-name            : shadow;
+        animation-iteration-count : infinite;
+        animation-timing-function : ease-in;
+    }
+
+    @keyframes shadow {
+        from {
+
+        }
+
+        25%, 75% {
+            box-shadow : 0px 0px 20px rgba(255, 41, 6, 0.8);
+        }
+
+        50% {
+            box-shadow : 0px 0px 40px rgb(255, 0, 6);
+        }
+
+        to {
+
+        }
+    }
+</style>
+
 <body>
 
 <div class="container">
-    <p>Hello World<span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></p>
+    <div class="page-header">
+        <h2 class="">Thank you for access!</h2>
+        <p><a href="https://goo.gl/u7hT1o">発表スライド</a></p>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>10ページ</h3>
+                    <p>JSとCSの違い</p>
+                    <p>
+                        <a href="/6.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>12ページ</h3>
+                    <p>transitionとAnimationの違い</p>
+                    <p>
+                        <a href="/8.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>16ページ</h3>
+                    <p>押し潰しと伸縮</p>
+                    <p>
+                        <a href="/12_1.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>18ページ</h3>
+                    <p>予備動作</p>
+                    <p>
+                        <a href="/14_1.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>20ページ</h3>
+                    <p>演出</p>
+                    <p>
+                        <a href="/16_1.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>22ページ</h3>
+                    <p>逐次描き</p>
+                    <p>
+                        <a href="/18_1.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>30ページ</h3>
+                    <p>副次アクション</p>
+                    <p>
+                        <a href="/26_1.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>34ページ</h3>
+                    <p>誇張</p>
+                    <p>
+                        <a href="/30_1.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <p>SVG</p>
+                    <p>
+                        <a href="/svg.html" class="btn btn-primary" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <script src="/asset/js/main.js"></script>
